Add DetailOrder, Loging, WorkOrder Controllers and views

--- a/ProjectControlPST/ProjectControlPST/ProjectControlPST.csproj
+++ b/ProjectControlPST/ProjectControlPST/ProjectControlPST.csproj
@@ -235,8 +235,11 @@
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Controllers\DetailOrderController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\LoginController.cs" />
     <Compile Include="Controllers\PstProjectControlInfoController.cs" />
+    <Compile Include="Controllers\WorkOrderController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -301,6 +304,9 @@
     <Content Include="Theming\fonts\glyphicons-halflings-regular.eot" />
     <Content Include="Theming\scripts\jquery-1.10.2.min.map" />
     <Content Include="Views\Home\GridView.cshtml" />
+    <Content Include="Views\Login\Index.cshtml" />
+    <Content Include="Views\WorkOrder\Index.cshtml" />
+    <Content Include="Views\DetailOrder\Index.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
