--- a/ProjectControlPST/ProjectControlPST/ProjectControlPST.csproj
+++ b/ProjectControlPST/ProjectControlPST/ProjectControlPST.csproj
@@ -173,11 +173,12 @@
     <Content Include="Theming\bower_components\angular\angular.js" />
     <Content Include="Theming\bower_components\angular\angular.min.js" />
     <Content Include="Theming\bower_components\angular\index.js" />
+    <Content Include="Theming\images\logo.png" />
     <Content Include="Theming\scripts\app.js" />
     <Content Include="Theming\scripts\app.min.js">
       <DependentUpon>app.js</DependentUpon>
     </Content>
-    <Content Include="Theming\scripts\components\_gobal.js" />
+    <Content Include="Theming\scripts\components\_global.js" />
     <Content Include="Theming\scripts\components\_grid-view.js" />
     <Content Include="Theming\scripts\components\_work-order.js" />
     <Content Include="Theming\styles\bootstrap.css" />
@@ -270,7 +271,6 @@
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
-    <Compile Include="Controllers\DetailOrderController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\LoginController.cs" />
     <Compile Include="Controllers\PstProjectControlInfoController.cs" />
@@ -293,7 +293,7 @@
     <Compile Include="Models\ProjectDescription.cs">
       <DependentUpon>PSTProjectControl.tt</DependentUpon>
     </Compile>
-    <Compile Include="Models\ProjectStatu.cs">
+    <Compile Include="Models\ProjectStatus.cs">
       <DependentUpon>PSTProjectControl.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\PSTProjectControl.Context.cs">
@@ -324,6 +324,8 @@
       <DependentUpon>PSTProjectControl.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\IRepository.cs" />
+    <Compile Include="Repositories\Repository.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\web.config" />
@@ -341,7 +343,7 @@
     <Content Include="Views\Home\GridView.cshtml" />
     <Content Include="Views\Login\Index.cshtml" />
     <Content Include="Views\WorkOrder\Index.cshtml" />
-    <Content Include="Views\DetailOrder\Index.cshtml" />
+    <Content Include="Views\WorkOrder\Update.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
