--- a/ProjectControlPST/ProjectControlPST/ProjectControlPST.csproj
+++ b/ProjectControlPST/ProjectControlPST/ProjectControlPST.csproj
@@ -154,6 +154,9 @@
       <DependentUpon>PSTProjectControl.edmx</DependentUpon>
       <LastGenOutput>PSTProjectControl.cs</LastGenOutput>
     </Content>
+    <Content Include="Theming\images\navbar.png" />
+    <Content Include="Theming\scripts\jquery.unobtrusive-ajax.js" />
+    <Content Include="Theming\scripts\jquery.unobtrusive-ajax.min.js" />
     <Content Include="Theming\bower_components\angular-animate\angular-animate.js" />
     <Content Include="Theming\bower_components\angular-animate\angular-animate.min.js" />
     <Content Include="Theming\bower_components\angular-animate\index.js" />
@@ -234,13 +237,6 @@
     <Content Include="Theming\bower_components\angular\LICENSE.md" />
     <Content Include="Theming\bower_components\angular\package.json" />
     <Content Include="Theming\bower_components\angular\README.md" />
-    <EntityDeploy Include="Models\PSTProjectControl.edmx">
-      <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>PSTProjectControl.Designer.cs</LastGenOutput>
-    </EntityDeploy>
-    <Content Include="Models\PSTProjectControl.edmx.diagram">
-      <DependentUpon>PSTProjectControl.edmx</DependentUpon>
-    </Content>
     <Content Include="Theming\bower_components\angular-sanitize\.bower.json" />
     <Content Include="Theming\bower_components\angular-sanitize\angular-sanitize.min.js.map" />
     <Content Include="Theming\bower_components\angular-sanitize\bower.json" />
@@ -260,6 +256,13 @@
     <Content Include="Theming\bower_components\angular-animate\package.json" />
     <Content Include="Theming\bower_components\angular-animate\README.md" />
     <None Include="bundleconfig.json" />
+    <EntityDeploy Include="Models\PSTProjectControl.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>PSTProjectControl.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <Content Include="Models\PSTProjectControl.edmx.diagram">
+      <DependentUpon>PSTProjectControl.edmx</DependentUpon>
+    </Content>
     <None Include="Properties\PublishProfiles\local.pubxml" />
     <None Include="Theming\scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Theming\scripts\jquery-1.10.2.js" />
@@ -281,6 +284,9 @@
     <Compile Include="Models\AssetProject.cs">
       <DependentUpon>PSTProjectControl.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\AssetsForRequest.cs">
+      <DependentUpon>PSTProjectControl.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\AssetsList.cs">
       <DependentUpon>PSTProjectControl.tt</DependentUpon>
     </Compile>
@@ -293,7 +299,7 @@
     <Compile Include="Models\ProjectDescription.cs">
       <DependentUpon>PSTProjectControl.tt</DependentUpon>
     </Compile>
-    <Compile Include="Models\ProjectStatus.cs">
+    <Compile Include="Models\ProjectStatu.cs">
       <DependentUpon>PSTProjectControl.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\PSTProjectControl.Context.cs">
@@ -318,6 +324,9 @@
       <DependentUpon>PSTProjectControl.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\User.cs">
+      <DependentUpon>PSTProjectControl.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\vw_assets_project.cs">
       <DependentUpon>PSTProjectControl.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\vw_workOrder_description.cs">
@@ -348,6 +357,21 @@
     <Content Include="Views\Login\Index.cshtml" />
     <Content Include="Views\WorkOrder\Index.cshtml" />
     <Content Include="Views\WorkOrder\Update.cshtml" />
+    <Content Include="Views\Shared\EditorTemplates\EffectedURL.cshtml" />
+    <Content Include="Views\Shared\EditorTemplates\vw_assets_project.cshtml" />
+    <Content Include="Views\Shared\EditorTemplates\Domain.cshtml" />
+    <Content Include="Views\Shared\EditorTemplates\ThirdPartyCredential.cshtml" />
+    <Content Include="Views\WorkOrder\Details.cshtml" />
+    <Content Include="Views\WorkOrder\_Assets.cshtml" />
+    <Content Include="Views\WorkOrder\_ThirdPartyCredential.cshtml" />
+    <Content Include="Views\WorkOrder\_EffectedURL.cshtml" />
+    <Content Include="Views\WorkOrder\_Domain.cshtml" />
+    <Content Include="Views\WorkOrder\Update\_WebDevelopment.cshtml" />
+    <Content Include="Views\WorkOrder\Update\_Banners.cshtml" />
+    <Content Include="Views\WorkOrder\Update\_Print.cshtml" />
+    <Content Include="Views\WorkOrder\Details\_Banners.cshtml" />
+    <Content Include="Views\WorkOrder\Details\_Print.cshtml" />
+    <Content Include="Views\WorkOrder\Details\_WebDevelopment.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
