--- a/ProjectControlPST/ProjectControlPST/ProjectControlPST.csproj
+++ b/ProjectControlPST/ProjectControlPST/ProjectControlPST.csproj
@@ -353,7 +353,7 @@
     <Content Include="Theming\fonts\glyphicons-halflings-regular.ttf" />
     <Content Include="Theming\fonts\glyphicons-halflings-regular.eot" />
     <Content Include="Theming\scripts\jquery-1.10.2.min.map" />
-    <Content Include="Views\Home\GridView.cshtml" />
+    <Content Include="Views\Home\_GridView.cshtml" />
     <Content Include="Views\Login\Index.cshtml" />
     <Content Include="Views\WorkOrder\Index.cshtml" />
     <Content Include="Views\WorkOrder\Update.cshtml" />
@@ -372,6 +372,7 @@
     <Content Include="Views\WorkOrder\Details\_Banners.cshtml" />
     <Content Include="Views\WorkOrder\Details\_Print.cshtml" />
     <Content Include="Views\WorkOrder\Details\_WebDevelopment.cshtml" />
+    <Content Include="Views\Shared\_LayoutLogin.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
