Login and preferences

--- a/ProjectControlPST/ProjectControlPST/bundleconfig.json
+++ b/ProjectControlPST/ProjectControlPST/bundleconfig.json
@@ -4,6 +4,7 @@
     "inputFiles": [
       "Theming/scripts/components/_global.js",
       "Theming/scripts/components/_grid-view.js",
+      "Theming/scripts/components/_preferences.js",
       "Theming/scripts/components/_work-order.js"
     ]
   }
