--- a/ProjectControlPST/ProjectControlPST/ProjectControlPST.csproj
+++ b/ProjectControlPST/ProjectControlPST/ProjectControlPST.csproj
@@ -155,6 +155,7 @@
       <LastGenOutput>PSTProjectControl.cs</LastGenOutput>
     </Content>
     <Content Include="Theming\images\navbar.png" />
+    <Content Include="Theming\scripts\components\_preferences.js" />
     <Content Include="Theming\scripts\jquery.unobtrusive-ajax.js" />
     <Content Include="Theming\scripts\jquery.unobtrusive-ajax.min.js" />
     <Content Include="Theming\bower_components\angular-animate\angular-animate.js" />
@@ -276,6 +277,7 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\LoginController.cs" />
+    <Compile Include="Controllers\PreferencesController.cs" />
     <Compile Include="Controllers\PstProjectControlInfoController.cs" />
     <Compile Include="Controllers\WorkOrderController.cs" />
     <Compile Include="Global.asax.cs">
@@ -329,12 +331,16 @@
     <Compile Include="Models\vw_assets_project.cs">
       <DependentUpon>PSTProjectControl.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\vw_typerequest_assets.cs">
+      <DependentUpon>PSTProjectControl.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\vw_workOrder_description.cs">
       <DependentUpon>PSTProjectControl.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\WorkOrder.cs">
       <DependentUpon>PSTProjectControl.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\PreferencesDetails.cs" />
     <Compile Include="Models\WorkOrderDetails.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\IRepository.cs" />
@@ -373,6 +379,7 @@
     <Content Include="Views\WorkOrder\Details\_Print.cshtml" />
     <Content Include="Views\WorkOrder\Details\_WebDevelopment.cshtml" />
     <Content Include="Views\Shared\_LayoutLogin.cshtml" />
+    <Content Include="Views\Preferences\Index.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
